@@ -1,3 +1,7 @@
+2018-04-11  Jérôme Pasquier  <rainbru@free.fr>
+
+	* MainActivity.java (waitAndFinish): wait 3 seconds and finish.
+
 2018-04-09  Jérôme Pasquier  <rainbru@free.fr>
 
 	* SettingsActivity.java (feedPrinterList): fix a bug when
